--- a/css/main.css
+++ b/css/main.css
@@ -1,32 +1,3 @@
-/*
-
-
-    Template Name   : Capture
-    Template Author : pixelhint.com
-    Author Email    : contact@pixelhint.com
-    License         : pixelhint.com/license
-    
-    
-    *****************************************
-    
-    
-    - Header
-    - Hero section
-    - Featured on seaction
-    - About section
-    - App features section
-    - Testimonials section
-    - Subscription section
-    - Footer
-    - Responsive CSS
-    
-
-*/
-
-
-
-
-
 
 
 /*		Fonts		*/
@@ -110,10 +81,10 @@ header{
 	height: 130px;
 	z-index: 99;
 	background-color: #41c17d;
-	background-image: -moz-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
-	background-image: -o-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
-	background-image: -webkit-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
-	background-image: linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
+	background-image: -moz-linear-gradient(bottom, #47ad76 0%, #fff 10%, #fff 90%, #47ad76 100%);
+	background-image: -o-linear-gradient(bottom, #47ad76 0%, #fff 10%, #fff 90%, #47ad76 100%);
+	background-image: -webkit-linear-gradient(bottom, #47ad76 0%, #fff 10%, #fff 90%, #47ad76 100%);
+	background-image: linear-gradient(bottom, #47ad76 0%, #fff 10%, #fff 90%, #47ad76 100%);
 }
 
 header .logo{
@@ -145,7 +116,7 @@ header .burger_icon:hover{
 
 header .burger_icon.active{
 	background: #359663;
-	color: #ffffff;
+	color: #000;
 }
 
 header nav{
@@ -163,9 +134,9 @@ header nav li:first-child{
 }
 
 header nav li a{
-	color: #fff;
+	color: #000;
 	font-family: "open_regular", Helvetica, Arial, sans-serif;
-	font-size: 16px;
+	font-size: 20px;
 
 	transition: all .2s linear;
 	-o-transition: all .2s linear;
@@ -399,6 +370,8 @@ a.app_link{
 
 .about{
 	padding: 100px 0;
+	background: url('../img/back.png') no-repeat fixed center center;	
+	background-size: cover;
 }
 
 .about .iphone{
@@ -438,7 +411,7 @@ a.app_link{
 .logo{
 	font-size: 45px;
 	font-family: 'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
-	color: #FFFFFF;
+	color: #000;
 	border-right: 1px dashed rgba(0, 0, 0, 0.1);
 	-webkit-box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.2);
 	height: 130px;
@@ -511,10 +484,10 @@ a.app_link{
 	width: 100%;
 	padding: 100px 0 20px 0;
 	background-color: #41c17d;
-	background-image: -moz-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
-	background-image: -o-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
-	background-image: -webkit-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
-	background-image: linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
+	background-image: -moz-linear-gradient(bottom, #47ad76 0%, #fff 10%, #fff 90%, #47ad76 100%);
+	background-image: -o-linear-gradient(bottom, #47ad76 0%, #fff 10%, #fff 90%, #47ad76 100%);
+	background-image: -webkit-linear-gradient(bottom, #fff 0%, #47ad76 5%, #47ad76 100%);
+	background-image: linear-gradient(bottom, #47ad76 0%, #fff 10%, #fff 90%, #47ad76 100%);
 }
 
 .app_features h1{
