--- a/css/main.css
+++ b/css/main.css
@@ -180,7 +180,7 @@ header .social li:first-child{
 	position: relative;
 	width: 100%;
 	height: 560px;
-	background: url('../img/hero.jpg') no-repeat fixed center center;	
+	background: url('../img/hero.JPG') no-repeat fixed center center;	
 	background-size: cover;
 }
 
